# SEARCH_ENGINE

./: .dockerignore  .gitignore  BUILDER_CHAT_TO_EMBEDDING.md  PRODUCTION_AUDIT.md  README.md  package.json  pnpm-lock.yaml  render.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  run_migrations.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  001_stub.py  002_idempotency_key_composite_unique.py  002_stub.py  003_bio_and_card_flags.py  003_stub.py  004_experience_cards_location.py  004_stub.py  005_experience_cards_parent_child.py  005_stub.py  006_stub.py  007_rebuild_schema.py  008_add_experience_card_embedding.py  009_add_draft_set_id_to_experience_cards.py  010_add_search_fields_to_experience_cards.py  011_rename_visibility_to_experience_card_visibility.py  012_merge_person_profile_tables.py  013_drop_work_preferred_salary_max.py  014_hybrid_search_schema.py  015_drop_work_salary_max.py  016_search_indexes_gin_trgm_vector.py  017_embedding_dimension_1024.py  018_embedding_dimension_324.py  (+10 more)
apps/api/docs/: API_ENDPOINTS.md  ELEVENLABS_CONVAI.md  EXPERIENCE_CARD_FLOW.md  EXTRACTION_TO_EMBEDDING_PIPELINE.md  SEARCH_FLOW.md  VAPI_CONVAI.md  WHY_SEARCH_MATCHED.md
apps/api/scripts/: README.md  search_acceptance.py  search_production_acceptance.py  seed_children_for_existing_parents.py  seed_db.py  seed_db_llm.py  seed_visibility.py
apps/api/src/: __init__.py  auth.py  config.py  constants.py  credits.py  dependencies.py  domain.py  domain_schemas.py  main.py  schemas.py  serializers.py  utils.py
(+194 files in other folders)
